fix: trigger width and remove overflow from bodyContainer to prevent scrolling bug

--- a/components/bibtemplate/src/styles/style.scss
+++ b/components/bibtemplate/src/styles/style.scss
@@ -40,7 +40,6 @@
 
 #bodyContainer {
   position: relative;
-  overflow: auto;
   flex: 1 1 100%;
 }
 
