--- a/components/dropdown/src/styles/style.scss
+++ b/components/dropdown/src/styles/style.scss
@@ -37,6 +37,6 @@
   }
 }
 
-::part(popover-trigger) {
+[auro-layover] {
   width: 100%;
 }
